style.css
* {
   font-size: 36px;
   margin: 0px;
   padding: 0px;
}

body {
    background-color: grey;
}

.container {
    justify-content: center;
    align-items: center;
    align-content: center;
    text-align: center;
    margin-top: 25px;
    margin-bottom: 25px;
    
    
}

.scorescreen {
    align-content: center;
    text-align: center;
    flex-direction: column;
    justify-content: center;
    display: flex;
    flex-direction: row;
    padding: 25px;
    
}

.playerScore{
    padding-right: 15px;
}

.response {
    align-items: center;
    justify-content: center;
    text-align: center;
    margin: 25px;
    padding-top: 25px;
}

.hidden {
    display: none;
}

.playAgain {
    text-align: center;
}

button {
    background-color: rgb(62, 57, 57);
    color: white;
    border-radius: 30px;
    border-color: white;
    margin-left: 15px;
    padding: 15px;

}

button:hover {
    background-color: yellow;
}

.emoji {
    text-align: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    column-gap: 50px;
}

header {
    text-align: center;
    background-color: crimson;
    margin-top: 0;
    padding: 20px;
    
}

footer {
    position: absolute;
    bottom: 0px;
    align-items: center;
    justify-content: center;
    display: flex;
    width: 100%;
    padding: 5px;


}
i {
    padding-left: 5px;
}

